--- a/apps/counter-app-jotai/app/app.css
+++ b/apps/counter-app-jotai/app/app.css
@@ -1,15 +1,50 @@
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-sans:
+    "Inter", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+  --color-surface-primary: #0a0a0a;
+  --color-surface-secondary: #171717;
+  --color-surface-tertiary: #262626;
+  --color-surface-white: #fafafa;
+
+  --color-content-primary: #fafafa;
+  --color-content-secondary: #a3a3a3;
+  --color-content-tertiary: #737373;
+  --color-content-black: #0a0a0a;
 }
 
-html,
-body {
-  @apply bg-white dark:bg-gray-950;
+@layer base {
+  html {
+    @apply h-full;
+  }
+  body {
+    @apply bg-surface-primary text-content-primary h-full;
+  }
+  ::placeholder {
+    @apply text-content-tertiary;
+  }
+  input[type="number"]::-webkit-inner-spin-button {
+    display: none;
+  }
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+}
 
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
+@layer utilities {
+  .scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: var(--color-content-primary) var(--color-surface-secondary);
+  }
+
+  .link {
+    @apply hover:text-content-secondary active:text-content-tertiary text-2xl;
+  }
+
+  .link-line a {
+    @apply underline;
   }
 }
